--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ dependencies = [
     "ipykernel (>=6.29.5,<7.0.0)",
     "notebook (>=7.3.2,<8.0.0)",
     "pyzmq (>=26.2.1,<27.0.0)",
+    "jupyter-client (>=8.6.3,<9.0.0)",
+    "pandas (>=2.2.3,<3.0.0)",
+    "sqlalchemy (>=2.0.38,<3.0.0)",
+    "psycopg2 (>=2.9.10,<3.0.0)",
 ]
 
 [poetry.group.dev.dependencies]
@@ -39,6 +43,9 @@ profile = "black"
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
 notebook = "^7.3.2"
+pytest = "^8.3.5"
+pytest-asyncio = "^0.25.3"
+pytest-mock = "^3.14.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
