--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,15 +21,8 @@ dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
     "sqlalchemy (>=2.0.38,<3.0.0)",
     "psycopg2 (>=2.9.10,<3.0.0)",
+    "pytest (>=8.3.5,<9.0.0)",
 ]
-
-[poetry.group.dev.dependencies]
-pytest = "^7.2.0"
-pytest-asyncio = "^0.21.0"
-black = "^23.0"  # Code formatter
-isort = "^5.12.0"  # Import sorter
-mypy = "^1.2.0"  # Type checker
-
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -41,11 +34,15 @@ line-length = 88
 profile = "black"
 
 [tool.poetry.group.dev.dependencies]
+black = "^23.0"  # Code formatter
+isort = "^5.12.0"  # Import sorter
+mypy = "^1.2.0"  # Type checker
 jupyter = "^1.1.1"
 notebook = "^7.3.2"
 pytest = "^8.3.5"
 pytest-asyncio = "^0.25.3"
 pytest-mock = "^3.14.0"
+coverage = "^7.6.12"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
