--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ dependencies = [
     "pytest (>=8.3.5,<9.0.0)",
 ]
 
+[tool.poetry.scripts]
+workout-db = "workout_db.main:run"
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 
@@ -43,6 +46,7 @@ pytest = "^8.3.5"
 pytest-asyncio = "^0.25.3"
 pytest-mock = "^3.14.0"
 coverage = "^7.6.12"
+pip = "^25.0.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
